--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"type": "module",
 	"dependencies": {
 		"autodetect-decoder-stream": "^2.0.2",
+		"better-sqlite3": "^8.1.0",
 		"bootstrap": "^5.3.0-alpha1",
 		"convert-svg-to-png": "^0.6.4",
 		"csv-reader": "^1.0.11",
