--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
 	"dependencies": {
 		"autodetect-decoder-stream": "^2.0.2",
 		"better-sqlite3": "^8.1.0",
-		"bootstrap": "^5.3.0-alpha1",
 		"convert-svg-to-png": "^0.6.4",
 		"csv-reader": "^1.0.11",
 		"dateformat": "^5.0.3",
 		"jszip": "^3.10.1",
 		"maplibre-gl": "^2.4.0",
-		"protobufjs": "^7.2.2"
+		"protobufjs": "^7.2.2",
+		"sveltestrap": "^5.10.0"
 	}
 }
