--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"jszip": "^3.10.1",
 		"maplibre-gl": "^2.4.0",
 		"protobufjs": "^7.2.2",
+		"reconnecting-eventsource": "^1.6.2",
 		"sveltestrap": "^5.10.0"
 	}
 }
